--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -87,7 +87,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/extratorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
-| [[https://proxy.duckduckgo.com/ip3/idope.site.ico]] [https://www.idope.top/ iDope]
+| [[https://www.google.com/s2/favicons?domain=idope.site#.png]] [https://www.idope.site/ iDope]
 | [https://github.com/nindogo Ni Ndogo]
 | 0.93
 | 2/Nov <br />2018
