--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -16,6 +16,14 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 !  DL/<br/>Info
 !  Comment
 |-
+|[http://yts.am/ YTS.AM]
+|[https://github.com/khensolomon/leyts Lethil]
+|0.3
+|2/Nov<br />2018
+|[https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py 
+[[https://github.com/Pireo/hello-world/blob/master/Download.gif]]]
+|Python3<br />✔ qbt 4.0.x
+|-
 |[[https://github.com/Pireo/hello-world/blob/master/MA_Icon_Graduation.png]] [http://academictorrents.com/ Academic Torrents]
 |[https://github.com/solenskiner/search-plugins solenskiner]
 |0.3
