--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -139,7 +139,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | Python2 & Python3<br />✔ qbt 4.1.x 
 |-
 | [[https://raw.githubusercontent.com/hannsen/qbittorrent_search_plugins/master/magnetdl.png]] [http://www.magnetdl.com/ MagnetDL]
-| [https://github.com/hannsen/qbittorrent_search_plugins/ hannsen]
+| [https://github.com/nindogo/qbtSearchScripts Ni Ndogo]
 | 1.3
 | 25/Jul<br />2018
 | [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
