--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -284,7 +284,7 @@ Mejor Torrent]
 | 4/Aug<br />2018
 | [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/yourbittorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python3<br />✔ qbt 4.1.x
-<br />❗ qbt 4.1.3(Does not<br /> work with other plugins)
+<br />❗ qbt 4.1.3(Doesn't<br /> work with other plugins)
 |-
 |[[https://github.com/Pireo/hello-world/blob/master/yts.png]] [http://yts.am/ YTS.AM]
 |[https://github.com/khensolomon/leyts Lethil]
