Added corsaro.red plugin

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -138,6 +138,13 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/corsaronero.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
+| [[https://github.com/dandag/qBittorrent_search_engine/blob/master/corsarored.png]] [https://corsaro.red/ Corsaro.red]
+| [https://github.com/dandag/qBittorrent_search_engine shamalaya]
+| 1.0
+| 16/Feb<br />2019
+| [https://github.com/dandag/qBittorrent_search_engine/blob/master/corsarored.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/dandag/qBittorrent_search_engine#user-content-corsarored--corsaroredpy [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
+| Python3<br />✔ qbt 4.1.x+
+|-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/kickass_icon.png]] [https://kickass-cr.online/  Kickass Torrent]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
 | 1.9
