--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -131,10 +131,10 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/corsaronero_icon.png]] 
-[http://ilcorsaroneros.info/  Il Corsaro Nero]
+[http://ilcorsaronero.gratis/  Il Corsaro Nero]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
-| 1.6
-| 29/Jan<br />2019
+| 1.7
+| 1/May<br />2019
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/corsaronero.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
