--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -114,14 +114,6 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/horriblesubs.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
-| [[https://www.google.com/s2/favicons?domain=idope.site#.png]] [https://www.idope.site/ iDope]
-| [https://github.com/nindogo Ni Ndogo]
-| 0.93
-| 2/Nov <br />2018
-| [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/idope.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| Python3<br />✔ qbt 4.1.x
-<br />❗ qbt 4.1.3(No result)
-|-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/corsaroblu_icon.png]] 
 [https://www.ilcorsaroblu.org/  Il Corsaro Blu]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
@@ -300,10 +292,10 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/torrentfunk.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
-| [[https://www.google.com/s2/favicons?domain=torrentgalaxy.org#.png]][https://torrentgalaxy.org/ TorrentGalaxy]
+| [[https://www.google.com/s2/favicons?domain=torrentgalaxy.to#.png]][https://torrentgalaxy.to/ TorrentGalaxy]
 | [https://github.com/nindogo Ni Ndogo]
-| 0.04
-| 10/June<br />2019
+| 0.06
+| 5/July<br />2019
 | [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/torrentgalaxy.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python3<br />✔ qbt 4.1.6+
 |-
