--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -113,7 +113,15 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/foxcili.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
-| [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/horriblesubs_icon.png]] 
+| [[https://github.com/jac/search_plugin/blob/master/horriblesubs_icon.png]]
+[https://horriblesubs.info/ HorribleSubs]
+| [https://github.com/jac/search_plugin jac]
+| 1.0
+| 23/Oct<br />2019
+| [https://raw.githubusercontent.com/jac/search_plugin/master/horriblesubs.py [[https://github.com/jac/search_plugin/blob/master/Download.gif]] ]
+| Python3<br />✔ qbt 4.1.x
+|-
+| [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/horriblesubs_icon.png]]
 [https://horriblesubs.info/  HorribleSubs]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
 | 1.0
