--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -278,12 +278,12 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/BrunoReX/qBittorrent-Search-Plugin-TokyoToshokan/master/tokyotoshokan.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.0.x
 |-
-| [[https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/torrent9.png]] [http://www.torrent9.ph/ Torrent9]
+| [[https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/torrent9.png]] [https://www.oxtorrent.com Torrent9]
 | [https://github.com/CravateRouge/qBittorrentSearchPlugins CravateRouge]
-| 2.2
-| 21/Jul<br />2019
+| 2.3
+| 25/Nov<br />2019
 | [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/torrent9.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
-| Python3<br />✔ qbt 4.1.6
+| Python3<br />✔ qbt 4.1.9.1
 |-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/torrentfunk_icon.png]][https://www.torrentfunk.com/ TorrentFunk]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
@@ -401,11 +401,11 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/alvin1979/qbrutracker/master/qbrutracker.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python3<br />✖ Not Working
 |-
-| [[https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.png]] [https://yggtorrent.ch YggTorrent]
+| [[https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.png]] [https://www2.yggtorrent.pe/ YggTorrent]
 | [https://github.com/CravateRouge/qBittorrentSearchPlugins CravateRouge]
-| 0.3
-| 04/Apr<br />2019
+| 0.4
+| 025/Nov<br />2019
 | [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
-| Python3<br />✔ qbt 4.1.5
+| Python3<br />✔ qbt 4.1.9.1
 |}
 ''*All files'' is a tarball (.tar.gz) containing script, icon, README & INSTALL files.
