--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -92,7 +92,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | [https://github.com/xyauhideto/DMHY_qBittorrent_search_plugin/raw/master/dmhyorg.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br />
 | Python3<br />✔ qbt 4.1.x
 |-
-| [[https://github.com/iordic/qbittorrent-search-plugins/raw/master/engines/elitetorrent.png]] [https://www.elitetorrent.li/ Elitetorrent]
+| [[https://github.com/iordic/qbittorrent-search-plugins/raw/master/engines/elitetorrent.png]] [https://www.elitetorrent.nl/ Elitetorrent]
 | [https://github.com/iordic/qbittorrent-search-plugins iordic]
 | 1.1
 | 05/March<br />2020
