--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -210,7 +210,8 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3 <br />✔ qbt 4.0.x
 |-
-| [[https://www.google.com/s2/favicons?domain=anidex.info#.png]] [http://anidex.info/ anidex.info][https://pctreload.com/ PCTReload]
+| [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
+[https://pctreload.com/ PCTReload]
 | [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
 | 1.0
 | 08/April<br />2020
