--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -218,6 +218,14 @@ Mejor Torrent]
 | [https://github.com/joseeloren/search-plugins/raw/master/nova3/engines/pctreload.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python3<br />✔ qbt 4.2.x+
 |-
+| [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
+[https://www.subtorrents.la SubTorrents]
+| [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
+| 1.0
+| 08/April<br />2020
+| [https://raw.githubusercontent.com/joseeloren/search-plugins/master/nova3/engines/subtorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| Python3<br />✔ qbt 4.2.x+
+|-
 | [[https://github.com/Pireo/hello-world/blob/master/rockbox.png]] [https://rawkbawx.rocks/ RockBox]
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
 | 1.1
