demonoid is still public

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -76,7 +76,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | 2.0
 | 26/May<br />2018
 | [https://raw.githubusercontent.com/hannsen/qbittorrent_search_plugins/master/demonoid.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br />
-| Python2 & Python3<br />✖ Went semi-private
+| Python2 & Python3
 |-
 | [[https://i.imgur.com/2QEr3r0.png]] [https://share.dmhy.org/ DMHY]
 | [https://github.com/xyauhideto/DMHY_qBittorrent_search_plugin xyauhideto]
