--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -417,5 +417,12 @@ Mejor Torrent]
 | 25/Nov<br />2019
 | [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
 | Python3<br />✔ qbt 4.1.9.1
+|-
+| [[https://github.com/bugsbringer/qbit-plugins/blob/master/favicon.png]] [https://www.lostfilm.tv/ LostFilm.TV]
+| [https://github.com/bugsbringer/qbit-plugins Bugsbringer]
+| 0.1
+| 22/May<br />2020
+| [https://raw.githubusercontent.com/bugsbringer/qbit-plugins/master/lostfilm.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| Python3
 |}
 ''*All files'' is a tarball (.tar.gz) containing script, icon, README & INSTALL files.
