--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -347,6 +347,12 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/yts_am.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Uses Yts.am's API. Python2 & Python3<br />✔ qbt 4.1.x+
 |-
+| [[https://github.com/bugsbringer/qbit-plugins/blob/master/darklibria.png]] [https://dark-libria.it/ dark-libria]
+| [https://github.com/bugsbringer/qbit-plugins Bugsbringer]
+| 0.10
+| 20/June<br />2020
+| [https://raw.githubusercontent.com/bugsbringer/qbit-plugins/master/darklibria.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/bugsbringer/qbit-plugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
+| Python3<br />✔ qbt 4.2.x
 |}
 
 = Plugins for Private sites =
@@ -418,10 +424,10 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
 | Python3<br />✔ qbt 4.1.9.1
 |-
-| [[https://github.com/bugsbringer/qbit-plugins/blob/master/favicon.png]] [https://www.lostfilm.tv/ LostFilm.TV]
+| [[https://github.com/bugsbringer/qbit-plugins/blob/master/lostfilm.png]] [https://www.lostfilm.tv/ LostFilm.TV]
 | [https://github.com/bugsbringer/qbit-plugins Bugsbringer]
-| 0.12
-| 23/May<br />2020
+| 0.14
+| 13/June<br />2020
 | [https://raw.githubusercontent.com/bugsbringer/qbit-plugins/master/lostfilm.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/bugsbringer/qbit-plugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
 | Python3<br />✔ qbt 4.2.x
 |}
