--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -22,6 +22,14 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 !  Comment
 
 |-
+| [[https://www.google.com/s2/favicons?domain=1337x.to#.png]] [http://1337x.to/ 1337x]
+| [https://github.com/sa3dany sa3dany]
+| 1.0
+| 01/Apr<br />2020
+| [https://gist.github.com/sa3dany/1478e311e6371a60e251e7bdfc2dda65/raw/6288d84627e23823427d03f7aca2f492aa0c8338/one337x.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt v4.2.x / python 3.5.0
+|-
+|-
 |[[https://github.com/Pireo/hello-world/blob/master/MA_Icon_Graduation.png]] [http://academictorrents.com/ Academic Torrents]
 |[https://github.com/solenskiner/search-plugins solenskiner]
 |0.3
