--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -100,7 +100,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | 1.1
 | 05/Mar<br />2020
 | [https://raw.githubusercontent.com/iordic/qbittorrent-search-plugins/master/engines/elitetorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| ✔ qbt 4.2.x / python 3.5.0
+|  ✖ Not Working
 |-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/ettv_icon.png]][https://www.ettv.tv/ ETTV]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
