--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -213,6 +213,14 @@ Mejor Torrent]
 | ✔ qbt 4.0.x / python 3.5.0
 |-
 | [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
+[https://https://pctfenix.com/ PCTFenix]
+| [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
+| 1.00
+| 04/October<br />2020
+| [https://raw.githubusercontent.com/joseeloren/search-plugins/master/nova3/engines/pctfenix.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.2.x / python 3.5.0
+|-
+| [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
 [https://pctreload.com/ PCTReload]
 | [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
 | 1.16
