--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -221,10 +221,18 @@ Mejor Torrent]
 | ✔ qbt 4.2.x / python 3.5.0
 |-
 | [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
+[https://pctfenix.com/ PCTMix]
+| [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
+| 1.1
+| 19/October<br />2020
+| [https://raw.githubusercontent.com/joseeloren/search-plugins/master/nova3/engines/pctmix.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.2.x / python 3.5.0
+|-
+| [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
 [https://pctreload.com/ PCTReload]
 | [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
-| 1.16
-| 08/April<br />2020
+| 1.22
+| 19/October<br />2020
 | [https://raw.githubusercontent.com/joseeloren/search-plugins/master/nova3/engines/pctreload.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.2.x / python 3.5.0
 |-
