--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -183,7 +183,7 @@ Mejor Torrent]
 | ✔ qbt 4.3.x / python 3.5.0
 |-
 | [[https://www.google.com/s2/favicons?domain=anidex.info#.png]]
-[https://pctfenix.com/ PCTMix]
+[https://pctmix.com/ PCTMix]
 | [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
 | 1.22
 | 19/October<br />2020
