--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -18,7 +18,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 !  Author<br/>(Repository)
 !  Ver.
 !  Update
-!  DL/<br/>Info
+!  Links
 !  Comment
 
 |-
@@ -151,7 +151,7 @@ Mejor Torrent]
 | 1.5
 | 02/Jan<br />2021
 | [https://raw.githubusercontent.com/libellula/qbt-plugins/main/mejor.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| ✔ qbt 4.1.x / python 3.5.0 (doesn't show seeds and peers and you can't click on results)
+| ✔ qbt 4.1.x / python 3.5.0 (no seeds/peers and results not clickable)
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]] [https://nyaa.pantsu.cat/ Nyaa.Pantsu]
 | [https://github.com/4chenz/pantsu-plugin/ 4chenz]
@@ -295,7 +295,7 @@ Mejor Torrent]
 | 0.03
 | 22/Sept<br />2018
 | [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/uniondht.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| ✔ qbt 4.1.x / python 3.5.0 (you can't click on results though)
+| ✔ qbt 4.1.x / python 3.5.0 (results not clickable)
 |-
 | [[https://www.google.com/s2/favicons?domain=yourbittorrent.com#.png]] [https://yourbittorrent.com/ YourBittorrent]
 | [https://github.com/nindogo Ni Ndogo]
@@ -331,7 +331,7 @@ Mejor Torrent]
 !  Author<br/>(Repository)
 !  Ver.
 !  Update
-!  DL/<br/>Info
+!  Links
 !  Comment
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/bakabt.png]] [https://bakabt.me BakaBT]
